run tests via npm test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AWS plugin for Fermata",
   "main": "fermata-aws.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test"
   },
   "repository": {
     "type": "git",
